--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: slategray;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -13,14 +13,15 @@ body {
     justify-content: center;
     width: 300px;
     height: 500px;
-    background-color: slategray;
+    background-color: black;
     border-radius: 10px;
 }
 
 .display {
     height: 64px;
     width: 250px;
-    background-color: #f0f0f0;
+    background-color: black;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -36,6 +37,26 @@ body {
     grid-gap: 10px;
 }
 
+.equals,
+.plus,
+.minus,
+.product,
+.division {
+    background-color: orange;
+}
+
+#container .zero {
+    grid-column: span 2;
+}
+
+.zero {
+    width: 100%;
+    height: 95%;
+    border-radius: 15px;
+    justify-content: start;
+    padding-left: 20px;
+}
+
 button {
     display: flex;
     justify-content: center;
@@ -45,5 +66,7 @@ button {
     font-size: 16px;
     height: 50px;
     border-radius: 50%;
-
+    background-color: darkslategray;
+    color: white;
+    border: none;
 }
