--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,12 @@ body {
     padding-left: 20px;
 }
 
+.clear,
+.toggle,
+.percentage {
+    background-color: gray;
+}
+
 button {
     display: flex;
     justify-content: center;
@@ -69,4 +75,8 @@ button {
     background-color: darkslategray;
     color: white;
     border: none;
+}
+
+button:active {
+    transform: scale(0.95);
 }
